# app-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  tag-pre-release.sh
.github/workflows/: build-and-push-prereleases.yml  build-and-push.yml
app/: __init__.py  config.py
app/routes/: __init__.py  feedback.py  predict.py  version.py
src/app/: __init__.py
src/app/routes/: version.py
