[project]
name = "app-service"
version = "1.0.13"
description = "Backend server for the application"
authors = [
    {name = "shreyas",email = "shreyaskalvankar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "libversion @ git+https://github.com/remla25-team15/lib-version.git@v0.0.2"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.2"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.6"

[tool.bumpver]
current_version = "1.0.13"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit = true
tag = true
version_files = ["pyproject.toml:project.version"]

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"'
]